feat: hoàn tất Sprint 9G/9H + Phase 10 VNPay + Phase 11 Testing/Docker
Đợt commit lớn gộp toàn bộ tiến độ từ sau Sprint 9F đến hết Phase 11:

Sprint 9G/9H (admin dashboard):
- Users CRUD (AdminUserController + 4 DTO + AdminUserService, 4 endpoint + 5 guardrails)
- Chat sessions admin (AdminChatSessionController + 3 DTO + service, list + detail dialog)
- AI Ops (AdminAiEmbeddingPage 3 KPI + Re-embed table)
- Common: useCopyToClipboard + AdminEmptyState + wire copy 4 chỗ
- Postman collection mở rộng 21 folder / 151 endpoint

Phase 10 VNPay sandbox:
- payment/vnpay module (VnpayService + VnpayCallbackController, HMAC-SHA512)
- V21__payment_transaction_fields.sql (paid_at, payment_transaction_ref)
- CheckoutService + CheckoutResponse trả paymentUrl khi method=vnpay
- Dual-callback pattern (return + IPN cùng update DB, idempotency chống double)
- VnpayReturnPage FE hiển thị kết quả thanh toán
- Docs vnpay-flow.md ~800 từ + testcases.md 38 case

Phase 11 A/B/C/D/E:
- 11A: 41 unit test JUnit + Mockito (Voucher, JWT, VNPay HMAC, ChatRateLimiter,
       AuthRateLimiter, Checkout, Inventory FIFO, AgentChat loop) < 5s
- 11B: 16 integration test Testcontainers pgvector (AuthFlow, OrderFlow,
       PermissionRbac, ReviewGate) — fix bug prod V15 phụ thuộc admin bằng
       V14_5__seed_admin_before_inventory.sql idempotent
- 11C: AuthRateLimiter (login 10/15p, register 5/1h, forgot 3/1h theo IP) +
       security-audit.md 220 dòng verify 0 IDOR + config prod hardened
- 11D: Docker Compose full stack 3 container (postgres + backend + frontend Nginx),
       Dockerfile multi-stage, .env.example, application-prod.properties,
       README root — 1 lệnh docker compose up -d chạy end-to-end
- 11E: V22__seed_demo_data.sql (5 user + 5 voucher + 10 order rải 6 status),
       Newman 154 request pass 20.8s, testcases.md 38 → 93 case

Fix phụ:
- V15 admin dependency bug (thêm V14_5) — dev DB out-of-order=true để apply
- Frontend Docker build: chuyển npx vite build (bỏ tsc -b strict)
- 255 ả